--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 # Server settings
-server.error.include-binding-errors=always
-server.error.include-message=always
 server.port=8080
   
 # Database connection settings
@@ -19,9 +17,17 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
-logging.level.org.springframework.boot=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.springframework.boot=DEBUG
 
-# Hibernate logging settings
-logging.level.org.hibernate.type.descriptor.sql=trace
+## Hibernate logging settings
+#logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=fatemeh.safaeiiiii@gmail.com
+spring.mail.password=1234567
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
