fix signup and login webService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,10 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 
+jwt.secret=yourSuperSecretKeyHere
+spring.main.allow-bean-definition-overriding=true
+
+
 #logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate=DEBUG
 #logging.level.org.springframework.boot=DEBUG
