--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 
 jwt.secret=yourSuperSecretKeyHere
+app.jwtToken.message=Token generated
 spring.main.allow-bean-definition-overriding=true
 
 
@@ -27,6 +28,7 @@ spring.main.allow-bean-definition-overriding=true
 
 ## Hibernate logging settings
 #logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer = error
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
