--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 # Server settings
 server.port=8080
-  
-# Database connection settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/registration
-spring.datasource.username=postgres
-spring.datasource.password=1234
+
+# Database connection settings (MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/lms
+spring.datasource.username=root
+spring.datasource.password=Aa@123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
@@ -17,21 +19,15 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 
+# JWT Secret
 jwt.secret=yourSuperSecretKeyHere
+
 spring.main.allow-bean-definition-overriding=true
 
-
-#logging.level.org.springframework=DEBUG
-#logging.level.org.hibernate=DEBUG
-#logging.level.org.springframework.boot=DEBUG
-
-## Hibernate logging settings
-#logging.level.org.hibernate.type.descriptor.sql=trace
-
+# Email settings (Gmail)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fatemeh.safaeiiiii@gmail.com
 spring.mail.password=1234567
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
